--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Marco Nenciarini <marco.nenciarini@2ndquadrant.com>
+Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
+Francesco Canovai <francesco.canovai@enterprisedb.com>
+Marco Nenciarini <marco.nenciarini@enterprisedb.com>
